# agentgif-rust

./: Cargo.toml  LICENSE  README.md
src/: client.rs  config.rs  main.rs
