[package]
name = "agentgif"
version = "0.2.0"
edition = "2021"
description = "CLI for AgentGIF — upload, manage, and share terminal GIFs"
license = "MIT"
repository = "https://github.com/dobestan/agentgif-rust"
keywords = ["gif", "terminal", "cli", "agentgif", "badge"]
categories = ["command-line-utilities"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
